@@ -10,6 +10,7 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.item.enchantment.Enchantment;
 import net.minecraft.world.item.enchantment.EnchantmentHelper;
+import net.minecraft.world.level.storage.loot.BuiltInLootTables;
 import net.minecraft.world.level.storage.loot.LootTables;
 import net.minecraft.world.level.storage.loot.entries.LootItem;
 import net.minecraft.world.level.storage.loot.functions.LootItemFunctionType;
@@ -22,11 +23,18 @@ import svenhjol.charm.helper.LogHelper;
 import svenhjol.charm.loader.CharmModule;
 import svenhjol.charm.registry.CommonRegistry;
 import svenhjol.strange.Strange;
+import svenhjol.strange.module.ruins.Ruins;
+import svenhjol.strange.module.ruins.StoneRuinsLoot;
+import svenhjol.strange.module.vaults.Vaults;
+import svenhjol.strange.module.vaults.VaultsLoot;
 
 import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.net.URISyntaxException;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 @CommonModule(mod = Strange.MOD_ID)
 public class Relics extends CharmModule {
@@ -40,10 +48,9 @@ public class Relics extends CharmModule {
         "Enchantment levels are capped at level 10.")
     public static int extraLevels = 5;
 
-    @Config(name = "Loot tables", description = "List of loot tables to add Relics to.")
-    public static List<String> configLootTables = Arrays.asList(
-        "strange:gameplay/rubble" // TODO: temporary
-    );
+    @Config(name = "Additional loot tables", description = "List of additional loot tables that relics will be added to.")
+    public static List<String> additionalLootTables = List.of();
+
 
     @Config(name = "Blacklist", description = "List of relic items that will not be loaded. See wiki for details.")
     public static List<String> configBlacklist = new ArrayList<>();
@@ -56,6 +63,23 @@ public class Relics extends CharmModule {
     @Override
     public void runWhenEnabled() {
         LootTableLoadingCallback.EVENT.register(this::handleLootTables);
+
+        if (Strange.LOADER.isEnabled(Vaults.class)) {
+
+            // If vaults is enabled, add relics to the large room.
+            VALID_LOOT_TABLES.add(VaultsLoot.VAULTS_LARGE_ROOM);
+
+        } else if (Strange.LOADER.isEnabled(Ruins.class) && Ruins.stoneRuins) {
+
+            // If vaults not enabled and stone ruins are enabled, add relics to the ruin rooms.
+            VALID_LOOT_TABLES.add(StoneRuinsLoot.STONE_RUINS_ROOM);
+
+        } else {
+
+            // Default to adding relics to woodland mansions.
+            VALID_LOOT_TABLES.add(BuiltInLootTables.WOODLAND_MANSION);
+
+        }
 
         try {
             List<String> classes = ClassHelper.getClassesInPackage(ITEM_NAMESPACE);
@@ -76,7 +100,7 @@ public class Relics extends CharmModule {
             LogHelper.info(Strange.MOD_ID, getClass(), "Failed to load classes from namespace: " + e.getMessage());
         }
 
-        for (String lootTable : configLootTables) {
+        for (String lootTable : additionalLootTables) {
             VALID_LOOT_TABLES.add(new ResourceLocation(lootTable));
         }
     }
